# witty-phrase-generator

./: Cargo.toml  DANCE  LICENSE  adjectives.txt  readme.md
src/: adjectives.txt  intensifiers.txt  lib.rs  main.rs  nouns.txt
