[package]
name = "witty-phrase-generator"
version = "0.0.1"
edition = "2018"
description = "Generates witty three-word phrases suitable for memorable default names."
license-file = "LICENCE"
authors = [ "Exr0n" ]
readme = "readme.md"
keywords = [ "random", "phrase", "generator" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/Exr0nProjects/witty-phrase-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
